--- a/Payments/mellat/src/Nop.Plugin.Payments.Mellat/app.config
+++ b/Payments/mellat/src/Nop.Plugin.Payments.Mellat/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="Nop.Plugin.Payments.Mellat.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -29,7 +29,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -43,10 +43,9 @@
   </runtime>
   <applicationSettings>
     <Nop.Plugin.Payments.Mellat.Properties.Settings>
-      <setting name="Nop_Plugin_Payments_Mellat_Bpm_Mellat_PaymentGatewayImplService"
-        serializeAs="String">
+      <setting name="Nop_Plugin_Payments_Mellat_Bpm_Mellat_PaymentGatewayImplService" serializeAs="String">
         <value>https://pgws.bpm.bankmellat.ir/pgwchannel/services/pgw</value>
       </setting>
     </Nop.Plugin.Payments.Mellat.Properties.Settings>
   </applicationSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup></configuration>
