--- a/Payments/saman/src/Nop.Plugin.Payments.Saman/app.config
+++ b/Payments/saman/src/Nop.Plugin.Payments.Saman/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="Nop.Plugin.Payments.Saman.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -29,7 +29,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -43,12 +43,10 @@
   </runtime>
   <applicationSettings>
     <Nop.Plugin.Payments.Saman.Properties.Settings>
-      <setting name="Nop_Plugin_Payments_Saman_Sep_InitPayment_PaymentIFBinding"
-        serializeAs="String">
+      <setting name="Nop_Plugin_Payments_Saman_Sep_InitPayment_PaymentIFBinding" serializeAs="String">
         <value>https://sep.shaparak.ir/payments/initpayment.asmx</value>
       </setting>
-      <setting name="Nop_Plugin_Payments_Saman_Sep_ReferencePayment_PaymentIFBinding"
-        serializeAs="String">
+      <setting name="Nop_Plugin_Payments_Saman_Sep_ReferencePayment_PaymentIFBinding" serializeAs="String">
         <value>https://sep.shaparak.ir/payments/referencepayment.asmx</value>
       </setting>
     </Nop.Plugin.Payments.Saman.Properties.Settings>
