--- a/Payments/v3.8/mellat/src/Nop.Plugin.Payments.Mellat/app.config
+++ b/Payments/v3.8/mellat/src/Nop.Plugin.Payments.Mellat/app.config
@@ -44,7 +44,7 @@
   <applicationSettings>
     <Nop.Plugin.Payments.Mellat.Properties.Settings>
       <setting name="Nop_Plugin_Payments_Mellat_Bpm_Mellat_PaymentGatewayImplService" serializeAs="String">
-        <value>https://pgws.bpm.bankmellat.ir/pgwchannel/services/pgw</value>
+        <value>https://bpm.shaparak.ir/pgwchannel/services/pgw?wsdl</value>
       </setting>
     </Nop.Plugin.Payments.Mellat.Properties.Settings>
   </applicationSettings>
